# psi

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  psi.pc.in  vcpkg.json  vg_uml.dia
cmake/: psi-config.cmake.in
cmake/modules/: AutoVcpkg.cmake  BuildDoxygen.cmake  CheckGitRevision.cmake  Findsdsl.cmake  SeqAnTarget.cmake  StdAtomic.cmake
ext/: external.cmake
include/psi/: base.hpp  basic_types.hpp  config.hpp.in  crs_matrix.hpp  fmindex.hpp  graph.hpp  graph_iter.hpp  hbitvector.hpp  hierarchical_bitvector.hpp  index.hpp  index_iter.hpp  path_base.hpp  path_interface.hpp  pathindex.hpp  pathset.hpp  range_sparse.hpp  range_sparse_base.hpp  release.hpp  seed.hpp  seed_finder.hpp  sequence.hpp  stats.hpp  traverser.hpp  traverser_base.hpp  traverser_bfs.hpp  traverser_dfs.hpp  utils.hpp
proto/: vg.proto
script/: append_region_paths.sh  parse2csv_config.yaml  parse2csv_ga_config.yaml  parse2csv_psikt_config.yaml  plot_kmerquery.R  plot_ksnpshist.R  plot_locino.R  plot_mapping_performance.R  plot_occhist.R  plot_pairs.R  plot_perfperocc.R  plot_pindexsize.R  plot_pindextime.R  plot_ptime.R  plot_ptimepc.R  plot_seedhits.R  plot_sensitivity.R  plot_ttime.R  plot_ttimepc.R  plot_ttimeperlocus.R  prepare_vg.sh
src/: CMakeLists.txt  Makefile  base.h  cst.hpp  fmindex.h  fmindex.hpp  graph.hpp  graph_iter.h  graph_iter.hpp  grem.cc  index.h  index.hpp  index_iter.h  index_iter.hpp  iterator.h  logger.h  logger.hpp  mapper.h  mapper.hpp  options.h  options.hpp  path.h  path.hpp  path_base.h  path_base.hpp  path_interface.h  path_interface.hpp  pathindex.h  pathindex.hpp  pathset.h  pathset.hpp  psi.cpp  psikt.cpp  release.h  release.hpp  seed.h  seed.hpp  seed_finder.hpp  sequence.h  sequence.hpp  (+17 more)
test/: .dir-locals.el  CMakeLists.txt  Makefile  bfs.cc  ggsim.cc  linear.cc  loci_stats.cc  pathindex_stats.cc  tests_base.h  tests_bfs.cc  tests_fmindex.cc  tests_indexiter.cc  tests_main.cc  tests_mapper.cc  tests_path.cc  tests_pathindex.cc  tests_pathset.cc  tests_sequence.cc  tests_stat.cc  tests_traverser.cc  tests_utils.cc  tests_vargraph.cc
test/data/middle/: m.gfa  m.vg  m.xg  sequence.fasta  sequence.fasta.fai  variants.vcf.gz.tbi
test/data/multi/: multi.gfa  multi.vg  multi.xg
test/data/small/: 20-mers  LICENSE  reads_n10000l100e0i0.fastq  reads_n10000l100e0i0.seq  reads_n10l10e0i0.fastq  reads_n10l10e0i0.seq  x.gfa  x.vg  x.xg
test/data/text/: sample_long_sequence.txt
test/data/tiny/: tiny.gfa  tiny.vg  tiny.xg
test/src/: test_base.hpp  test_config.hpp.in  test_crsmatrix.cpp  test_fmindex.cpp  test_graph.cpp  test_graphiter.cpp  test_hbitvector.cpp  test_hierarchical_bitvector.cpp  test_indexiter.cpp  test_main.cpp  test_mapper.cpp  test_path.cpp  test_pathindex.cpp  test_pathset.cpp  test_range_sparse.cpp  test_seedfinder.cpp  test_sequence.cpp  test_stat.cpp  test_stats.cpp  test_traverser.cpp  test_utils.cpp  test_vargraph.cpp  tests_indexiter.cc  tests_pathset.cc  tests_sequence.cc  tests_stat.cc  tests_traverser.cc
tools/: .dir-locals.el  CMakeLists.txt
tools/src/: alice.cpp  count_kmers.cc  count_kmers.cpp  dindexctl.cpp  ggsim.cpp  ggsim.hpp  linear.cc  linear.cpp  loci_stats.cpp  pathindex_stats.cc  pathindex_stats.cpp  pindexctl.cpp  rcrs_benchmark.cpp  sloci.cpp
vg/: CMakeLists.txt  LICENSE  vg.proto
